# data_prep_and_feature_engineering

./: .gitignore  README.adoc  README.md  docToolchainConfig.groovy  dtcw  pyproject.toml
.github/workflows/: github-action.yml
DFE/first_test_demo/: README.md  pyproject.toml
DFE/first_test_demo/src/data_sources/: api_test.py  hdf5_test.py  mnist.hdf5Zone.Identifier  odata.ipynb  odata.ipynbZone.Identifier  odata.py  odata_response.json
DFE/first_test_demo/src/data_sources/json_files/: odata.json  odata_response.json  petstore_response.json
DFE/first_test_demo/src/docs/arc42/: arc42.adoc
DFE/first_test_demo/src/docs/arc42/chapters/: 01_tensorflow_horse_truck.adoc  02_architecture_constraints.adoc  02_data_sources.adoc  03_context_and_scope.adoc  03_scaling_numerical.adoc  04_solution_strategy.adoc  05_building_block_view.adoc  07_deployment_view.adoc  08_concepts.adoc  10_quality_requirements.adoc
DFE/first_test_demo/src/error_type_2/: TidyData.xlsx  TidyData_ErrorType_Two.xlsx  bad_example1.py  error_type2.py  transaction_data.csv
DFE/first_test_demo/src/first_test_demo/: data_frame.py
DFE/first_test_demo/src/scaling_numerical/: total_rooms_minmax.pkl
DFE/first_test_demo/src/tensorflow/: README.adoc  check_label.py  config.py  data.py  main.py  model.py  trainer.py
src/categorical_variables/: categorical.ipynb  effect_coding.py  feature_hasher.ipynb  okcupid_profiles.parquet  one_hot.py  one_hot2.py  onehot.ipynb
src/data_sources/: hdf5_test.py  odata.ipynb  odata.py
src/dimension_reduction/: dimension_reduction starter.ipynb  (+1 more)
(+66 files in other folders)
