[project]
name = "first-test-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "Trung Thieu Quang",email = "thieuquangtrung1999@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py (>=3.13.0,<4.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "first_test_demo", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
