[project]
name = "first-test-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "Trung Thieu Quang",email = "thieuquangtrung1999@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "h5py (>=3.13.0,<4.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "tensorflow (>=2.19.0,<3.0.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "tensorflow-keras (>=0.1,<0.2)",
    "pillow (>=11.2.1,<12.0.0)",
    "tensorflow-datasets (==4.9.8)"
]

[tool.poetry]
packages = [{include = "first_test_demo", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
